--- a/index.html
+++ b/index.html
@@ -1,4 +1,23 @@
-<!doctype html>
+<!DOCTYPE html>
 <title></title>
-<main></main>
+<link rel="stylesheet" href="/styles.css" />
+<link
+    rel="stylesheet"
+    href="http://aladin.u-strasbg.fr/AladinLite/api/v2/latest/aladin.min.css"
+/>
+<main>
+    <!-- <div id="my_dataviz"></div> -->
+</main>
+<script
+    type="text/javascript"
+    src="http://code.jquery.com/jquery-1.9.1.min.js"
+    charset="utf-8"
+></script>
+<script
+    type="text/javascript"
+    src="http://aladin.u-strasbg.fr/AladinLite/api/v2/latest/aladin.min.js"
+    charset="utf-8"
+></script>
+
+<!-- <script src="https://d3js.org/d3.v4.js"></script> -->
 <script src="/bundle.js"></script>
