--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <title></title>
 <link rel="stylesheet" href="/styles.css" />
+<!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dosis" /> -->
+<link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Questrial"
+/>
 <link
     rel="stylesheet"
     href="http://aladin.u-strasbg.fr/AladinLite/api/v2/latest/aladin.min.css"
